# SRead

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  configure  configure.ac  main.c
examples/: read_ex.ino  write_ex.ino
include/: Makefile.am
src/: Makefile.am  main.c  sread.c  sread.h
src/main/: main.cpp
src/serial_read/: serial_read.cpp
src/test/: test.cpp
sread/include/: serial_read.h
sread/src/: main.cpp  serial_read.cpp
